# arboviral_data_science

./: .gitignore  AUDITORIA_DADOS.md  AUDITORIA_DADOS.txt  LICENSE  README.md  RELATORIO_MODELAGEM.md  ROADMAP.md  pyproject.toml
.streamlit/: config.toml
app/: README.md  app.py
app/i18n/: README.md  __init__.py  _validar.py  en.py  pt.py
app/lib/: agregacao_geo.py  carregar.py  labels.py  predicao.py  tema.py
app/pages/: 1_Alertas.py  2_Municipio.py  3_Mapa.py  4_Comparativo.py  5_Roadmap.py
app/screens/: alertas.py  comparativo.py  mapa.py  municipio.py  proximos_passos.py  sobre.py  variaveis.py  visao_geral.py
app/static/: styles.css
configs/: municipios_poc.yaml  outbreak_label.yaml  schema.yaml
data/interim/: densidade.parquet  esf.parquet  febre_amarela.parquet  habitacao.parquet  ibge.parquet  mapbiomas.parquet  mobilidade_pendular.parquet  munic.parquet  nasa_power.parquet  saude.parquet  sih_sus.parquet  sinan_chikungunya.parquet  sinan_dengue.parquet  sinan_zika.parquet  sinisa.parquet  socioeconomico.parquet  vacinacao_fa.parquet
data/lookup/: README.md  municipios_sp_estacoes_inmet.xlsx
data/lookup/geo/: README.md  drs_sp.geojson  municipios_sp.geojson  (+2 more)
data/raw/: README.md
notebooks/: README.md
scripts/: README.md  gerar_geo_lookup.py  lai_pedido_ccd_sp.md
slides/: apresentacao_orientador.md
src/arboviral/: __init__.py  analyze_no_cross.py  analyze_results.py  analyze_thresholds.py  analyze_transicoes.py  build_reports.py  explain_winner.py  io.py  train.py  train_tuned.py  tune_optuna.py
tests/: test_smoke.py
(+40 files in other folders)
